Fix whitespace and styling

--- a/css/matic.css
+++ b/css/matic.css
@@ -22,7 +22,7 @@ article {
   padding: 40px;
   border-radius: 6px;
   overflow: hidden;
-  width: 680px;
+  width: 600px;
 }
 article > header {
   border-bottom: 1px solid #002633;
